--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <style>
         :root {
-            --jade: #00A86B;
-            --gold: #FFD700;
-            --red: #FF4D4D;
-            --deep-blue: #1B4B73;
-            --ink-black: #1a1a1a;
+            --jade: #2BAE66;
+            --gold: #D4AF37;
+            --red: #C41E3A;
+            --deep-blue: #003A6C;
+            --ink-black: #1C1C1C;
             --paper-white: #F5F5F5;
             
             --background: var(--ink-black);
@@ -44,7 +44,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: rgba(26, 26, 26, 0.95);
+            background: rgba(28, 28, 28, 0.95);
             backdrop-filter: blur(10px);
             z-index: 1000;
             padding: 1rem 0;
@@ -104,7 +104,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: rgba(0, 168, 107, 0.1);
+            background: rgba(43, 174, 102, 0.1);
             transition: left 0.3s ease;
         }
 
@@ -119,7 +119,7 @@
         /* Sections */
         section {
             min-height: 100vh;
-            padding: 6rem 2rem;
+            padding: 6rem 2rem 2rem;
             display: none;
             position: relative;
         }
@@ -188,42 +188,26 @@
             transform: translateY(20px);
         }
 
-        .ink-brush {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        .ink-brush path {
-            fill: none;
-            stroke: var(--primary);
-            stroke-width: 2;
-            opacity: 0.1;
-        }
-
         /* Timeline Section */
         .timeline-section {
             padding-top: 80px;
             position: relative;
-            overflow: hidden;
+            overflow: visible;
         }
 
         .timeline-container {
             max-width: 1200px;
             margin: 0 auto;
             position: relative;
+            padding: 2rem;
         }
 
         .timeline {
             position: relative;
-            padding: 50px;
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 2rem;
+            padding: 2rem 0;
         }
 
         .timeline-dragon {
@@ -238,22 +222,29 @@
 
         .timeline-entry {
             position: relative;
-            width: calc(33.33% - 2rem);
-            opacity: 0;
-            transform: translateY(50px);
+            background: rgba(43, 174, 102, 0.05);
+            border-radius: 8px;
+            padding: 1.5rem;
+            border-left: 4px solid var(--primary);
+            transition: all 0.3s ease;
             z-index: 1;
+        }
+
+        .timeline-entry:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(43, 174, 102, 0.2);
         }
 
         .timeline-pearl {
             position: absolute;
+            left: -12px;
+            top: 50%;
+            transform: translateY(-50%);
             width: 20px;
             height: 20px;
             background: var(--primary);
             border-radius: 50%;
-            left: -10px;
-            top: 15px;
             box-shadow: 0 0 15px var(--primary);
-            transition: all 0.3s ease;
         }
 
         .timeline-pearl::before {
@@ -266,31 +257,14 @@
             animation: pulse 2s infinite;
         }
 
-        .entry-content {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 1.5rem;
-            border-radius: 8px;
-            border-left: 4px solid var(--primary);
-            transition: all 0.3s ease;
-            backdrop-filter: blur(5px);
-        }
-
-        .entry-content:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 168, 107, 0.2);
-        }
-
         .entry-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
             margin-bottom: 1rem;
         }
 
         .entry-title {
             color: var(--primary);
             font-size: 1.25rem;
-            margin: 0;
+            margin-bottom: 0.5rem;
         }
 
         .entry-date {
@@ -299,6 +273,7 @@
         }
 
         .entry-description {
+            color: var(--text);
             margin: 1rem 0;
         }
 
@@ -310,7 +285,7 @@
         }
 
         .tech-tag {
-            background: rgba(0, 168, 107, 0.2);
+            background: rgba(43, 174, 102, 0.2);
             color: var(--primary);
             padding: 0.25rem 0.75rem;
             border-radius: 15px;
@@ -319,8 +294,27 @@
         }
 
         .tech-tag:hover {
-            background: rgba(0, 168, 107, 0.3);
+            background: rgba(43, 174, 102, 0.3);
             transform: translateY(-2px);
+        }
+
+        .entry-links {
+            margin-top: 1rem;
+            display: flex;
+            gap: 1rem;
+        }
+
+        .entry-link {
+            color: var(--accent);
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            transition: all 0.3s ease;
+        }
+
+        .entry-link:hover {
+            color: var(--primary);
         }
 
         /* Skills Section */
@@ -333,11 +327,10 @@
         }
 
         .skill-category {
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(43, 174, 102, 0.05);
             padding: 2rem;
             border-radius: 8px;
             transition: transform 0.3s ease;
-            backdrop-filter: blur(5px);
         }
 
         .skill-category:hover {
@@ -398,7 +391,7 @@
             width: 60px;
             height: 60px;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(43, 174, 102, 0.1);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -454,6 +447,27 @@
             100% { opacity: 0.5; }
         }
 
+        /* Section Headers */
+        .section-header {
+            color: var(--primary);
+            font-size: 2.5rem;
+            text-align: center;
+            margin-bottom: 3rem;
+            position: relative;
+        }
+
+        .section-header::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            height: 3px;
+            background: var(--primary);
+            border-radius: 2px;
+        }
+
         /* Responsive Design */
         @media (max-width: 768px) {
             .nav-links {
@@ -464,8 +478,8 @@
                 font-size: 2.5rem;
             }
 
-            .timeline-entry {
-                width: 100%;
+            .timeline {
+                grid-template-columns: 1fr;
             }
 
             @keyframes typing {
@@ -484,22 +498,9 @@
                 to { width: 252px }
             }
         }
-
-        /* Canvas Styles */
-        #three-canvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 0;
-            opacity: 0.2;
-            pointer-events: none;
-        }
     </style>
 </head>
 <body>
-    <canvas id="three-canvas"></canvas>
     <nav>
         <div class="nav-content">
             <a href="#" class="nav-logo">Michael Chen</a>
@@ -520,10 +521,6 @@
             <p class="hero-subtitle">Bridging tradition and innovation through technology</p>
             <p class="hero-description">A Computer Science major blending technology and creativity</p>
         </div>
-        <svg class="ink-brush" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <path d="M10,50 Q30,40 50,50 T90,50" />
-            <path d="M10,60 Q30,50 50,60 T90,60" />
-        </svg>
     </section>
 
     <section id="about">
@@ -536,9 +533,6 @@
     <section id="timeline">
         <h2 class="section-header">My Journey</h2>
         <div class="timeline-container">
-            <svg class="timeline-dragon" viewBox="0 0 1000 1000" preserveAspectRatio="none">
-                <!-- Dragon path will be added dynamically -->
-            </svg>
             <div class="timeline">
                 <!-- Timeline entries will be dynamically added here -->
             </div>
