Single Page Transition

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <nav class="nav-content">
-        <a href="#" class="nav-logo">Michael Chen</a>
+        <a href="#home" class="nav-logo">Michael Chen</a>
         <div class="nav-links">
-            <a href="#home" class="nav-link active">Home</a>
+            <a href="#home" class="nav-link">Home</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#timeline" class="nav-link">Timeline</a>
             <a href="#skills" class="nav-link">Skills</a>
@@ -27,7 +27,7 @@
     </nav>
 
     <main>
-        <section id="home" class="section active">
+        <section id="home" class="section">
             <div class="hero-background"></div>
             <div class="hero-content">
                 <h1 id="hi-im-michael-chen" class="typewriter">Hi, I'm Michael Chen</h1>
