--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
         </section>
 
         <section id="skills" class="section">
-            <h2 class="section-header">Skills & Expertise</h2>
-            <div class="skills-grid"></div>
+            <h2 class="section-header">Skills</h2>
+            <div class="skills-container">
+                <div class="skills-content">
+                    <div class="skills-grid"></div>
+                </div>
+            </div>
         </section>
 
         <section id="contact" class="section">
