Dyanmic Updating of timeline

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="about" class="section">
             <h2 class="section-header">About Me</h2>
             <div class="about-content">
-                <p>Computer Science student at UC Riverside with a passion for AI and software development.</p>
+                <p>CS@UCR with a Minor in Management: Strategy & Entrepreneurship | President & Co-Founder AI@UCR | Part-Time SWE@Mobivolt LLC | AMD Pervasive AI Winner</p>
             </div>
         </section>
 
@@ -53,9 +53,7 @@
         <section id="skills" class="section">
             <h2 class="section-header">Skills</h2>
             <div class="skills-container">
-                <div class="skills-content">
-                    <div class="skills-grid"></div>
-                </div>
+                <div class="skills-grid"></div>
             </div>
         </section>
 
