--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav class="nav-content">
-        <a href="#home" class="nav-logo">Michael Chen</a>
+        <a href="#home" class="nav-logo" id="nav-name">Michael Chen</a>
         <div class="nav-links">
             <a href="#home" class="nav-link">Home</a>
             <a href="#about" class="nav-link">About</a>
@@ -30,16 +30,16 @@
         <section id="home" class="section">
             <div class="hero-background"></div>
             <div class="hero-content">
-                <h1 id="hi-im-michael-chen" class="typewriter">Hi, I'm Michael Chen</h1>
-                <p class="hero-subtitle">Bridging tradition and innovation through technology</p>
-                <p class="hero-description">A Computer Science major blending technology and creativity</p>
+                <h1 id="hi-im-michael-chen" class="typewriter">Hi, I'm <span id="hero-name"></span></h1>
+                <p class="hero-subtitle" id="hero-tagline"></p>
+                <p class="hero-description" id="hero-title"></p>
             </div>
         </section>
 
         <section id="about" class="section">
             <h2 class="section-header">About Me</h2>
             <div class="about-content">
-                <p>CS@UCR with a Minor in Management: Strategy & Entrepreneurship | President & Co-Founder AI@UCR | Part-Time SWE@Mobivolt LLC | AMD Pervasive AI Winner</p>
+                <p id="about-text"></p>
             </div>
         </section>
 
@@ -61,13 +61,13 @@
             <div class="contact-content">
                 <h2 class="section-header">Get in Touch</h2>
                 <div class="social-links">
-                    <a href="mailto:michaelluochen1@gmail.com" class="social-link" title="Email">
+                    <a href="" id="email-link" class="social-link" title="Email">
                         <i class="fas fa-envelope"></i>
                     </a>
-                    <a href="https://github.com/mchen04" class="social-link" title="GitHub" target="_blank" rel="noopener noreferrer">
+                    <a href="" id="github-link" class="social-link" title="GitHub" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/michael-luo-chen" class="social-link" title="LinkedIn" target="_blank" rel="noopener noreferrer">
+                    <a href="" id="linkedin-link" class="social-link" title="LinkedIn" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
