--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 </head>
 <body>
     <nav class="nav-content">
-        <a href="#home" class="nav-logo" id="nav-name">Michael Chen</a>
+        <div class="nav-top">
+            <a href="#home" class="nav-logo" id="nav-name">Michael Chen</a>
+            <button class="hamburger-menu" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
         <div class="nav-links">
             <a href="#home" class="nav-link">Home</a>
             <a href="#about" class="nav-link">About</a>
