--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="#about" class="nav-link">About</a>
             <a href="#timeline" class="nav-link">Timeline</a>
             <a href="#skills" class="nav-link">Skills</a>
+            <a href="#resume" class="nav-link">Resume</a>
             <a href="#contact" class="nav-link">Contact</a>
         </div>
     </nav>
@@ -63,6 +64,17 @@
             <h2 class="section-header">Skills</h2>
             <div class="skills-container">
                 <div class="skills-grid"></div>
+            </div>
+        </section>
+
+        <section id="resume" class="section">
+            <h2 class="section-header">Resume</h2>
+            <div class="resume-container">
+                <p class="resume-description">Download my resume to learn more about my experience and qualifications.</p>
+                <a href="media/images/Michael_Chen_resume.pdf" class="resume-download-btn" download>
+                    <i class="fas fa-download"></i>
+                    Download Resume
+                </a>
             </div>
         </section>
 
