Embedded PDF and Style

--- a/index.html
+++ b/index.html
@@ -70,11 +70,18 @@
         <section id="resume" class="section">
             <h2 class="section-header">Resume</h2>
             <div class="resume-container">
-                <p class="resume-description">Download my resume to learn more about my experience and qualifications.</p>
-                <a href="media/images/Michael_Chen_resume.pdf" class="resume-download-btn" download>
-                    <i class="fas fa-download"></i>
-                    Download Resume
-                </a>
+                <div class="resume-content">
+                    <div class="resume-preview">
+                        <iframe src="media/images/Michael_Chen_resume.pdf" title="Resume Preview"></iframe>
+                    </div>
+                    <div class="resume-actions">
+                        <p class="resume-description">View my complete resume below or download it for offline viewing.</p>
+                        <a href="media/images/Michael_Chen_resume.pdf" class="resume-download-btn" download>
+                            <i class="fas fa-download"></i>
+                            Download Resume
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
 
