Achievements Section Implemented

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="nav-links">
             <a href="#home" class="nav-link">Home</a>
             <a href="#about" class="nav-link">About</a>
+            <a href="#achievements" class="nav-link">Achievements</a>
             <a href="#timeline" class="nav-link">Timeline</a>
             <a href="#skills" class="nav-link">Skills</a>
             <a href="#resume" class="nav-link">Resume</a>
@@ -50,6 +51,35 @@
             <h2 class="section-header">About Me</h2>
             <div class="about-content">
                 <p id="about-text"></p>
+            </div>
+        </section>
+
+        <section id="achievements" class="section">
+            <h2 class="section-header">Key Achievements</h2>
+            <div class="achievements-container">
+                <div class="achievements-grid">
+                    <div class="achievement-card">
+                        <div class="achievement-icon">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h3>Software Engineer at Mobivolt</h3>
+                        <p>Boosted operational efficiency by 65% through real-time control systems and enhanced measurement accuracy by 30%</p>
+                    </div>
+                    <div class="achievement-card">
+                        <div class="achievement-icon">
+                            <i class="fas fa-trophy"></i>
+                        </div>
+                        <h3>AMD Pervasive AI Winner</h3>
+                        <p>Won among 8,000+ participants for PHiLIP project, awarded $2,500 and selected for live demonstration</p>
+                    </div>
+                    <div class="achievement-card">
+                        <div class="achievement-icon">
+                            <i class="fas fa-robot"></i>
+                        </div>
+                        <h3>President & Co-Founder AI@UCR</h3>
+                        <p>Founded UCR's first AI club, growing to 50+ members and organizing workshops with industry experts</p>
+                    </div>
+                </div>
             </div>
         </section>
 
